--- a/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_entry.scss
@@ -227,7 +227,7 @@
 			}
 		}
 		.review-synopsis {
-			@include muses-bg;	
+			@include muses-bg(true);	
 			margin: 0 0 20px 20px;
 			padding: 20px;
 			p:last-child {
@@ -415,5 +415,24 @@
 		.form-submit {
 			order: 6;
 		}
+	}
+}
+
+/* Entry - Attachment
+========================================================================== */
+
+.attachment {
+	.entry-single .entry.attachment .entry-content .attachment-file {
+		.attachment-text {
+			margin: 0 0 2px 0;
+		}
+		.wp-caption-text {
+			font-style: italic;
+			@include font-size(14px);			
+		}
+	}
+	.navigation-links {
+		padding: 20px 0 0 0;
+		border-top: 1px solid $color-05;
 	}
 }
