Start testing for adding a lightbox to wordpress gallery

--- a/themusescircle/dev/themes/musescircle/assets/scss/style.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/style.scss
@@ -26,6 +26,7 @@
 @import 'layout';
 @import 'entry';
 @import 'owl-carousel';
+@import 'swipe-box';
 @import 'front-page';
 @import 'recent-reviews';
 @import 'footer';
