--- a/themusescircle/dev/themes/musescircle/assets/scss/_mixins.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_mixins.scss
@@ -13,6 +13,13 @@
 	}
 }
 
+// Calculation for gallery columns
+@mixin gallery-columns($columns, $spacing) {
+	flex: 1 1 ((100 / $columns - $spacing) * 1%);
+	max-width: ((100 / $columns - $spacing) * 1%);	
+}
+
+// For stone-link muses background
 @mixin muses-bg($border: '') {
 	background: url($images + 'muses-bg.png') 0 0 repeat;
 	background-attachment: fixed;
@@ -21,7 +28,7 @@
 	}	
 }
 
-// Muses Icons
+// Muses icons
 @mixin muses-icons($fs: '') {
 	@if $fs != '' {	
 		@include font-size($fs);		
