Add shortcode file and shortcode for clearfix

--- a/themusescircle/dev/themes/musescircle/assets/scss/_base.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_base.scss
@@ -178,3 +178,10 @@ hr {
 	clip: rect(1px, 1px, 1px, 1px);
 	position :absolute !important;
 }
+
+/* Theme shortcodes
+========================================================================== */
+
+.clearfix {
+	clear: both;
+}
