--- a/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
@@ -154,6 +154,15 @@
 .icon-google-plus:before {
     content: $icon-google-plus;
 }
+.icon-digg:before {
+    content: $icon-digg;
+}
+.icon-reddit:before {    
+    content: $icon-reddit;
+}
+.icon-stumble-upon:before {    
+    content: $icon-stumble-upon;
+}
 .icon-envelope:before {
     content: $icon-envelope;
 }
