--- a/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_variables.scss
@@ -55,6 +55,9 @@ $icon-comments: '\f086';
 $icon-twitter: '\f099';
 $icon-facebook: '\f09a';
 $icon-google-plus: '\f0d5';
+$icon-digg: '\f1a6';
+$icon-reddit: '\f281';
+$icon-stumble-upon: '\f1a4';
 $icon-envelope: '\f0e0';
 $icon-linkedin: '\f0e1';
 $icon-chevron-left: '\f053';
