--- a/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
@@ -288,7 +288,7 @@ h1, h2, h3, h4, h5, h6 {
     a {
         color: $color-01;
         &:hover {
-            color: $color-07
+            color: $color-07;
         }
     }
 }
