--- a/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_front-page.scss
@@ -31,18 +31,7 @@
 			top: 0;
 			bottom: 0;
 			margin: auto;
-			@include sizing(40px, 40px);
-			border-radius: 100%;
-			background: $color-06;
-			padding: 10px;
-			text-align: center;
-			.icon {
-				@include font-size(18px);
-				@include transition(color 0.3s ease-in-out);			
-			}
-			&:hover .icon {
-				color: $color-05;
-			}			
+			@include arrow-buttons;			
 		}
 		.owl-prev {
 			left: 0;
