--- a/themusescircle/dev/themes/musescircle/assets/scss/_mixins.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_mixins.scss
@@ -1,3 +1,19 @@
+// Arrow buttons
+@mixin arrow-buttons {
+	@include sizing(40px, 40px);
+	border-radius: 100%;
+	background: $color-06;
+	padding: 10px;
+	text-align: center;
+	.icon {
+		@include font-size(18px);
+		@include transition(color 0.3s ease-in-out);			
+	}
+	&:hover .icon {
+		color: $color-05;
+	}	
+}
+
 // Flex 
 @mixin flex($flow) {
 	display: flex;
