--- a/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_layout.scss
@@ -381,4 +381,15 @@
 			}
 		}
 	}
+	&.widget_text .textwidget .countdown .countdown-timer > div {
+		.countdown-value {
+			@include sizing(50px, 50px);
+			@include font-size(14px);
+			line-height: 44px;
+			border: 3px solid $color-06;
+		}
+		.countdown-label {
+			@include font-size(25px);
+		}
+	}
 }
