--- a/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_header.scss
@@ -175,6 +175,9 @@
 		@include flex(column nowrap);
 		justify-content: center;
 		align-items: flex-end;
+		.site-name, .site-description {
+			text-shadow: 1px 2px 0 rgba(0,0,0,0.85);
+		}
 		.site-name {
 			@include font-size(80px);
 			line-height: 0.75;
@@ -203,6 +206,7 @@
 		@include flex(column nowrap);
 		justify-content: center;
 		@include font-size(55px);
+		text-shadow: 1px 2px 0 rgba(0,0,0,0.85);
 		&.has-thumbnail {
 			padding: 0 0 0 150px;
 		}
