--- a/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
+++ b/themusescircle/dev/themes/musescircle/assets/scss/_typography.scss
@@ -250,6 +250,9 @@
 .icon-quotes-right:before {
     content: $icon-quotes-right;
 }
+.icon-menu:before {
+    content: $icon-menu;
+}
 
 /* General text elements
 ========================================================================== */
